[gd_scene load_steps=34 format=2]

[ext_resource path="res://Scene/playerScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scene/TileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Premade dialog box  big.png" type="Texture" id=3]
[ext_resource path="res://Scripts/inputMove.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Player/Teemo Basic emote animations sprite sheet.png" type="Texture" id=5]
[ext_resource path="res://Scene/bakeACake.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/backgroundItem.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Items/foodItem2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Items/foodItem1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Items/foodItem3.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Resources/InventoryBG.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Items/foodItem4.png" type="Texture" id=12]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/ARCADECLASSIC.TTF"

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/ARCADECLASSIC.TTF"

[sub_resource type="DynamicFont" id=6]
size = 26
font_data = SubResource( 5 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "IDLE",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=20]
font_path = "res://Fonts/ARCADECLASSIC.TTF"

[sub_resource type="DynamicFont" id=21]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 20 )

[node name="gameScene" type="Node2D"]

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( -1, -6 )
z_index = 998

[node name="TileMap" parent="." instance=ExtResource( 2 )]

[node name="Input" type="Node2D" parent="."]
z_index = 999
script = ExtResource( 4 )

[node name="inputDecoration" type="Node2D" parent="Input"]
position = Vector2( 10, 1 )

[node name="inputBackground" type="TextureRect" parent="Input/inputDecoration"]
margin_left = 251.0
margin_top = 436.0
margin_right = 786.0
margin_bottom = 523.0
texture = ExtResource( 3 )
expand = true

[node name="inputBox" type="LineEdit" parent="Input/inputDecoration"]
modulate = Color( 1, 1, 1, 0.509804 )
margin_left = 364.0
margin_top = 466.0
margin_right = 758.0
margin_bottom = 503.0
theme = SubResource( 1 )
custom_colors/cursor_color = Color( 0.839216, 0.494118, 0.188235, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.839216, 0.494118, 0.188235, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 2 )
caret_blink = true
caret_blink_speed = 0.25

[node name="startNode" type="Node2D" parent="Input"]
position = Vector2( 10, 1 )
z_index = 1

[node name="exampleText" type="Label" parent="Input/startNode"]
margin_left = 366.0
margin_top = 471.0
margin_right = 532.0
margin_bottom = 499.0
custom_colors/font_color = Color( 1, 1, 1, 0.509804 )
custom_fonts/font = SubResource( 6 )
text = "INPUT HERE"

[node name="playerSprite" type="Node2D" parent="Input"]
position = Vector2( 10, 1 )

[node name="playerAnimated" type="AnimatedSprite" parent="Input/playerSprite"]
position = Vector2( 307, 476 )
scale = Vector2( 1.59375, 1.625 )
frames = SubResource( 19 )
animation = "IDLE"
frame = 2
playing = true

[node name="bakeACakeScene" parent="." instance=ExtResource( 6 )]
z_index = 100

[node name="foodItems" type="Node2D" parent="."]
z_index = 997

[node name="playerItems" type="Node2D" parent="."]
z_index = 1000

[node name="UI" type="Node2D" parent="playerItems"]

[node name="InventoryBG" type="TextureRect" parent="playerItems/UI"]
margin_left = -4.0
margin_top = 109.0
margin_right = 89.0
margin_bottom = 380.0
texture = ExtResource( 11 )
expand = true

[node name="BackgroundItem0" type="Sprite" parent="playerItems/UI"]
position = Vector2( 41, 155.5 )
scale = Vector2( 1.9, 1.825 )
texture = ExtResource( 7 )

[node name="itemImg" type="TextureRect" parent="playerItems/UI/BackgroundItem0"]
margin_left = -10.0
margin_top = -10.9589
margin_right = 9.0
margin_bottom = 9.04106
texture = ExtResource( 9 )
expand = true

[node name="ItemLabel" type="Label" parent="playerItems/UI/BackgroundItem0"]
modulate = Color( 1, 1, 1, 0.729412 )
margin_left = 3.68421
margin_top = -1.09591
margin_right = 16.6842
margin_bottom = 51.9041
custom_fonts/font = SubResource( 21 )
text = "0
"

[node name="BackgroundItem1" type="Sprite" parent="playerItems/UI"]
position = Vector2( 41, 212.5 )
scale = Vector2( 1.9, 1.825 )
texture = ExtResource( 7 )

[node name="itemImg" type="TextureRect" parent="playerItems/UI/BackgroundItem1"]
margin_left = -10.0
margin_top = -10.9589
margin_right = 9.0
margin_bottom = 9.04106
texture = ExtResource( 8 )
expand = true

[node name="ItemLabel" type="Label" parent="playerItems/UI/BackgroundItem1"]
modulate = Color( 1, 1, 1, 0.729412 )
margin_left = 3.68421
margin_top = -1.09591
margin_right = 16.6842
margin_bottom = 51.9041
custom_fonts/font = SubResource( 21 )
text = "0
"

[node name="BackgroundItem2" type="Sprite" parent="playerItems/UI"]
position = Vector2( 41, 269.5 )
scale = Vector2( 1.9, 1.825 )
texture = ExtResource( 7 )

[node name="itemImg" type="TextureRect" parent="playerItems/UI/BackgroundItem2"]
margin_left = -10.0
margin_top = -11.0
margin_right = 8.0
margin_bottom = 9.0
texture = ExtResource( 10 )
expand = true

[node name="ItemLabel" type="Label" parent="playerItems/UI/BackgroundItem2"]
modulate = Color( 1, 1, 1, 0.729412 )
margin_left = 3.68421
margin_top = -1.09591
margin_right = 16.6842
margin_bottom = 51.9041
custom_fonts/font = SubResource( 21 )
text = "0
"

[node name="BackgroundItem3" type="Sprite" parent="playerItems/UI"]
position = Vector2( 41, 326.5 )
scale = Vector2( 1.9, 1.825 )
texture = ExtResource( 7 )

[node name="itemImg" type="TextureRect" parent="playerItems/UI/BackgroundItem3"]
margin_left = -10.0
margin_top = -10.9589
margin_right = 9.0
margin_bottom = 9.04106
texture = ExtResource( 12 )
expand = true

[node name="ItemLabel" type="Label" parent="playerItems/UI/BackgroundItem3"]
modulate = Color( 1, 1, 1, 0.729412 )
margin_left = 3.68421
margin_top = -1.09591
margin_right = 16.6842
margin_bottom = 51.9041
custom_fonts/font = SubResource( 21 )
text = "0
"

[connection signal="text_changed" from="Input/inputDecoration/inputBox" to="Input" method="_on_inputBox_text_changed"]
[connection signal="text_entered" from="Input/inputDecoration/inputBox" to="Input" method="_on_inputBox_text_entered"]
